Changed some height values in css to pixels instead of percentages so the blocks are still visible even when there’s no text. Changed h1’s to paragraphs and that fixed the weird block spacing issue. Edit button now creates text boxes and changes button’s text to ‘Done’, and clicking ‘Done’ removes the text fields and changes the button’s text back to ‘Edit’.

--- a/profile.css
+++ b/profile.css
@@ -58,6 +58,12 @@ body {
 	border-radius: 5px;
 }
 
+.text-box {
+	width: 96%;
+	margin-left: 2%;
+	margin-top: 5px;
+}
+
 .profname {
 	color: white;
 	padding-left: 2%;
@@ -67,7 +73,7 @@ body {
 
 .location-field {
 	background-color: #aaaaaa;
-	height: 5%;
+	height: 35px;
 	width: 96%;
 	margin-left: 2%;
 	margin-right: 2%;
@@ -83,7 +89,7 @@ body {
 
 .pantry-field {
 	background-color: #aaaaaa;
-	height: 5%;
+	height: 35px;
 	width: 96%;
 	margin-left: 2%;
 	margin-right: 2%;
@@ -99,7 +105,7 @@ body {
 
 .share-field {
 	background-color: #aaaaaa;
-	height: 10%;
+	height: 70px;
 	width: 96%;
 	margin-left: 2%;
 	margin-right: 2%;
@@ -115,7 +121,7 @@ body {
 
 .diet-field {
 	background-color: #aaaaaa;
-	height: 15%;
+	height: 35px;
 	width: 96%;
 	margin-left: 2%;
 	margin-right: 2%;
